--- a/src/app/components/UserTableData/index.module.scss
+++ b/src/app/components/UserTableData/index.module.scss
@@ -2,4 +2,29 @@
     // width: 100%;
     // height: 100%;
     margin-left: 23rem;
+    min-height: 400px;
+}
+
+.loading_container, .error_container, .empty_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 23rem;
+    min-height: 400px;
+    background-color: var(--bg-card);
+    border-radius: 8px;
+    padding: 2rem;
+    
+    p {
+        margin: 1rem 0;
+        font-size: 1.2rem;
+        color: var(--text-color);
+    }
+}
+
+.error_container {
+    button {
+        margin-top: 1rem;
+    }
 }
