--- a/src/app/components/TableData/index.module.scss
+++ b/src/app/components/TableData/index.module.scss
@@ -1,4 +1,5 @@
 .table_header {
+    // margin-top: 2rem;
     margin-left: 23rem;
     display: flex;
     justify-content: space-between;
@@ -12,6 +13,8 @@
 }
 
 .table_data {
+    margin-top: 1rem;
+
     // width: 100%;
     // height: 100%;
     margin-left: 23rem;
